fix database